--- a/Calculator/calculatorstyle.css
+++ b/Calculator/calculatorstyle.css
@@ -5,35 +5,41 @@ html{
 body{
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x : hidden;
 }
 #calculatorBody{
   width: 100%;
   height: 100%;
- /* border: 9px solid black;*/
 }
 #calculatorScreen{
+  display: flex;
+  flex-flow: row wrap;
+  gap: 1vw;
   background-color: #b0caff;
   width: 100%;
   height: 72vw;
-  overflow-x : scroll;
   border-bottom-left-radius: 5vw;
   border-bottom-right-radius: 5vw;
-  /*border: 9px solid orangered;*/
 }
 #calculatorScreen1{
   width: 100%;
   font-size: 45px;
-  height: 18vw;
+  height: 36vw;
+  overflow-x: scroll;
   background-color: #b0caff;
- /* border: 9px solid orange;*/
+  text-align: right;
 }
 #calculatorScreen2{
+  position: relative;
   background-color: #b0caff;
   width: 100%;
+  top: 4vw;
+  cursor: auto;
   font-size: 45px;
   height: 18vw;
-  /*border: 9px solid yellow;*/
+  overflow-x: scroll;
+  text-align: right;
 }
 #calculatorButtons{
   display: flex;
@@ -42,14 +48,11 @@ body{
   overflow-y: scroll;
   gap: 1%; 
   width: 100%;
- /* height: 63%;*/
-  /*border: 9px solid blue;*/
 }
 .calBtns{
   width: 24vw;
   height: 24vw;
  background-color: #deeaff;
- /* color: cyan;*/
   font-size: 24px;
   border-radius: 54%;
   border: 2px solid #deeaff;
@@ -58,7 +61,6 @@ body{
   width: 24vw;
   height: 24vw;
  background-color: #9be0eb;
- /* color: cyan;*/
   font-size: 24px;
   border-radius: 54%;
   border: 2px solid #9be0eb;
@@ -67,8 +69,8 @@ body{
   width: 24vw;
   height: 24vw;
  background-color: #95e8a4;
- /* color: cyan;*/
   font-size: 24px;
   border-radius: 54%;
   border: 2px solid #95e8a4;
-}
+  }
+  
