--- a/Calculator/calculatorstyle.css
+++ b/Calculator/calculatorstyle.css
@@ -68,9 +68,101 @@ body{
 #AC{
   width: 24vw;
   height: 24vw;
- background-color: #95e8a4;
+ background-color: #96fad7;
   font-size: 24px;
   border-radius: 54%;
-  border: 2px solid #95e8a4;
+  border: 2px solid #96fad7;
+}
+.differents2{
+  width: 24vw;
+  height: 24vw;
+ background-color: #deeaff;
+  font-size: 24px;
+  border-radius: 54%;
+  border: 2px solid #deeaff;
+}
+#calculatorButtons1{
+ background-color: white;
+}
+#down p{
+  display: block;
+  position: relative;
+  width: 10vw;
+  height: 10vw;
+  left: 80%;
+  top: auto;
+  background-color: white;
+  border-radius: 10vw;
+  border: 2px solid darkgray;
+  color: darkgray;
+  transform: rotateZ(90deg);
+  text-align: center;
+  /*animation: mymove2 1s infinite;*/
+}
+.animatedElem1{
+  animation: mymove1 1s;
+}
+.animatedElem2{
+  animation: mymove2 1s;
+}
+@keyframes mymove1{
+  from{
+    height: 44vw;
+    overflow: hidden;
+    
   }
-  
+  to{
+    height: 94vw;
+    overflow: hidden;
+  }
+}
+@keyframes mymove2{
+  from{
+    transform: rotateZ(90deg);
+  }
+  to{
+    transform: rotateZ(270deg);
+  }
+}
+.p1{
+  display: block;
+  position: relative;
+  width: 10vw;
+  height: 10vw;
+  left: 80%;
+  top: auto;
+  background-color: white;
+  border-radius: 10vw;
+  border: 2px solid darkgray;
+  color: darkgray;
+  transform: rotateZ(90deg);
+  text-align: center;
+  /*animation: mymove2 1s infinite;*/
+}
+.p2{
+  display: block;
+  position: relative;
+  width: 10vw;
+  height: 10vw;
+  left: 80%;
+  top: auto;
+  background-color: white;
+  border-radius: 10vw;
+  border: 2px solid darkgray;
+  color: darkgray;
+  transform: rotateZ(270deg);
+  text-align: center;
+  /*animation: mymove2 1s infinite;*/
+}
+.calculatorButtons11{
+  background-color: white;
+  width: 100%;
+  height: 44vw;
+  overflow: hidden;
+}
+.calculatorButtons12{
+  background-color: white;
+  width: 100%;
+  height: 94vw;
+  overflow: hidden;
+  }
